--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
     <!-- GOOGLE FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300' rel='stylesheet'
         type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
     <!-- Flex Slider -->
     <link rel="stylesheet" href="@Url.Content("~/Content/css/flexslider.css")" >
     <script src="@Url.Content("~/Content/js/jquery.flexslider-min.js")"></script>
@@ -84,18 +85,9 @@
 </div>*@
         <div class="wrapper">
             <div class="jlogo"></div>
-
-            <div id="presskit">
-                <div class="presskit-fb">
-                    <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_390_facebook.png")" /></div>
-                <div class="presskit-ap">
-                    <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_067_cleaning.png")" /></div>
-                <div class="presskit-pk">
-                    <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_074_cup.png")" /></div>
-                <div class="presskit-tw">
-                    <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_074_cup.png")" /></div>
-            </div>
-
+            <div id="facebook"></div>
+            <div id="presskit"></div>
+            <div id="actionplant"></div>
             <nav id="meny">
 
                 <ul id="nav" class="sf-menu">
