--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -126,8 +126,8 @@
                     </div>
                     <div>
                         <input type="submit" value ="Prenumerera" id="submit"/>
+                        <a class="subscribe-link">Avregistrera</a>
                     </div>
-                    <div><a class="subscribe-link">Avregistrera</a></div>
                     <span id="error" class="warning"></span>
                 </fieldset>
               </div>
