fixat länkar och header i news i home

--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -776,6 +776,8 @@ nav a{
 
 /* BLOG ------------------------------------------------------------*/
 
+#posts-list .post-h2 { font-size: 20px;} 
+
 .floated-content,
 #posts-list,
 #post-content{
