--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -16,7 +16,7 @@
             link = "Index";
         }
         else { link = "blog"; };     
-        <article class="format-standard">
+        <article class="format-standard" id="@news.ID">
             <div class="entry-date">
                 <div class="number">@news.Date.Day</div>
                 <div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div>
