--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1208,3 +1208,9 @@ td a:first-child{border-left: 0px solid black !important;}
     background-position: -1px -1px;
 }
 .excerpt span {display: none;}
+
+.eventQuestion{ display: block; font-size: 20px; margin-top:40px; margin-bottom:15px;  }
+.eventQuestions{ display:block; font-size: 15px; margin-top:15px; margin-bottom:15px; }
+
+.RadioButton{display:inline; }
+.answerQuestion{margin-bottom: 10px;}
