--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -11,7 +11,7 @@
     
         <article class="format-standard">
 			<div class="entry-date"><div class="number">@events.Date.Day</div><div class="year">@events.Date.ToString("MMM"),@events.Date.Year</div></div>
-			<h2  class="post-heading"><a href="single.html">@events.HeadLine</a></h2>
+			<h2  class="post-heading"><a href="Event/SingleEvent/@events.ID">@events.HeadLine</a></h2>
 			<div class="excerpt">@MvcHtmlString.Create(@events.Description)</div>
 			<div class="meta">
 				<div class="categories">@events.City</div>
