--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -157,7 +157,7 @@
                 <div class="footer-presskit-tw">
                     <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_074_cup.png")" /></div>
             </div>
-            <div class="login-form footer-block">
+            <div id="login-form">
                 @Html.Partial("_LogOn", new LogOnModel())
             </div>
         </div>
