--- a/Mission.WebUI/Content/css/skin.css
+++ b/Mission.WebUI/Content/css/skin.css
@@ -281,6 +281,10 @@ article .meta
 
 /* FOOTER ------------------------------------------------------------*/
 
+#footer 
+{
+padding-top:20px;   
+}
 
 footer .wrapper
 {
