--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1029,7 +1029,7 @@ article .meta .delete{
     margin-bottom: 33px;
 }
 
-#headline #submit
+#headline #submit, .login
 {
     cursor:pointer;
     color: #ffffff;
@@ -1051,7 +1051,7 @@ article .meta .delete{
     font-size: 100%;
 }
 
-#headline #submit:hover
+#headline #submit:hover, .login
 {
   background-color:#fff;
 }
@@ -1214,3 +1214,27 @@ td a:first-child{border-left: 0px solid black !important;}
 
 .RadioButton{display:inline; }
 .answerQuestion{margin-bottom: 10px;}
+
+
+#login-form 
+{
+    float:left;
+    width:30%;
+    position:relative;
+}
+
+#footer h3{padding-bottom:10px;}
+
+#footer h3, #footer p, #footer label
+{
+    color:#fff
+}     
+
+.editor-field
+{
+    
+}     
+
+.login 
+{
+    }                            
