--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1033,7 +1033,6 @@ article .meta .delete{
     color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #49afcd;
-  background-color: #2f96b4;
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
   background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
   background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
@@ -1051,7 +1050,12 @@ article .meta .delete{
 
 #headline #submit:hover
 {
-  background-color:#fff;
+    background-color:#49afdd;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, to(#2f96b4), from(#5bc0de));
+    background-image: -webkit-linear-gradient(top, #2f96b4, #5bc0de);
+    background-image: -o-linear-gradient(top, #2f96b4, #5bc0de);
+    background-image: linear-gradient(to bottom, #2f96b4, #5bc0de);
+    background-image: -moz-linear-gradient(top, #2f96b4, #5bc0de);
 }
 
 
@@ -1178,7 +1182,7 @@ td a:first-child{border-left: 0px solid black !important;}
     display:block;
 }
 
-#facebook, #actionplant, #presskit
+#facebook, #actionplant, #presskit, #admin
 {
     float: right;
     height: 45px;
@@ -1191,25 +1195,50 @@ td a:first-child{border-left: 0px solid black !important;}
 
 #facebook
 {
-    background: url(../img/facebook_logo.jpg) no-repeat;
+    background: url(../img/Facebook-f.png) no-repeat;
 }
 
 #actionplant
 {
     background: url(../img/actionplant_mini.png) no-repeat;
-    background-color: #BDC8F3;
 }
+
+#actionplant:hover
+{
+    background: url(../img/actionplant_mini_green.png) no-repeat;
+}
+
 #presskit
 {
     background: url(../img/FilmRoll2.png) no-repeat;
-    background-color:#aaaafb;
     background-position: -1px -1px;
 }
 .excerpt span {display: none;}
 
 
-#subscribe-link
+.subscribe-link
 {
      color: #FFFFFF;
      margin-left: 40px;
+}
+
+#admin
+{
+    width:150px;
+    list-style:none;
+}
+
+#admin li a
+{
+    color:white;
+    font-family: 'Didact Gothic',sans-serif;
+}
+
+#admin li a:hover
+{
+    color:#ef6b4d;
+}
+
+#facebook:hover, #actionplant:hover, #presskit:hover
+{
 }
