--- a/Mission.WebUI/Content/css/comments.css
+++ b/Mission.WebUI/Content/css/comments.css
@@ -285,7 +285,8 @@
 }
 
 #contactForm input[type="text"],
-#commentform input[type="text"]{
+#commentform input[type="text"],
+#contactForm input[type="password"]{
 	overflow: auto;
 	width: 174px;
 	margin-bottom: 20px;
