--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -120,18 +120,21 @@
     </div>
     <div id="footer">
         <div class="wrapper clearfix">
-            <aside class="conact-sidebar footer-block">
+            
                 <div class="block">
                     <h4>
                         Adress</h4>
                     <ul class="address-block">
-                        <li class="address">Address line, city, state ZIP</li>
-                        <li class="phone">+123 456 789</li>
+                        <li class="address">Actionplant</li>
+                        <li>Fabriksgatan 10</li>
+                        <li>503 38 BORÅS</li>
+                        <li class="phone">Mobil | 0731 - 80 01 11</li>
+                        <li>Kontor | 0733 - 41 04 30</li>
                         <li class="mobile">+123 456 789</li>
                         <li class="email"><a href="mailto:email@server.com">test@test.com</a></li>
                     </ul>
                 </div>
-            </aside>
+            
             <div class="footer-block footer-presskit">
                 <div class="footer-presskit-fb">
                     <img src="@Url.Content("~/Content/img/glyphicons/glyphicons_390_facebook.png")" /></div>
