--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1253,23 +1253,36 @@ td a:first-child{border-left: 0px solid black !important;}
 
 #login-form 
 {
-    float:left;
+   
     width:30%;
     position:relative;
 }
 
-#footer h3{padding-bottom:10px;}
+#footer h3{padding-bottom:10px; margin-left:1em;}
 
 #footer h3, #footer p, #footer label
 {
-    color:#fff
-}     
-
-.editor-field
-{
+    color:#eee;
     
 }     
 
-.login 
+#footer h3 img{ float: right; margin-top: -15px; margin-right: 30px;}
+
+.contactInfo
 {
-    }                            
+    width: 30%;
+    
+    color: #eee;    
+}      
+
+.contactInfo li{margin-bottom: 6px; font-size: 15px; letter-spacing: 0.05em;}      
+#actionPlant{width: 30%;  }             
+#footerActionplant p{font-size: 15px; line-height:1.26em; letter-spacing:0.04em; color:#eee;} 
+
+#login-form{float:left; width: 30%;}
+#footerActionplant{float:right; width: 30%;}
+ .contactInfo{margin-left:5%; float:left; width: 30%;}
+#contactForm, .address-block, #footerActionplant p{border-top: 1px dashed #656565; padding-top: 3em; }
+
+
+
