--- a/Mission.WebUI/Views/Event/Overview.cshtml
+++ b/Mission.WebUI/Views/Event/Overview.cshtml
@@ -20,7 +20,7 @@
                 <td>
                     @Html.ActionLink("Statistik", "EventStatistics", "Event", new { id = events.ID }, null)
                     @Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)
-                    @Html.ActionLink("CreateAnswer", "CreateAnswer", "Event", new { id = events.ID }, null)
+                    @Html.ActionLink("Skapa svar", "CreateAnswer", "Event", new { id = events.ID }, null)
                     @Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)
                     @Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)
                 </td>
