--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -10,6 +10,7 @@
             'success': function drawChart(x) {
                 var Categories = [['Age', 'Male score', 'Female score']];
                 var AgeScore;
+                var options = { title: 'Antal: ' + ' M = ' + x[0][2]["mCount"] + ' F = ' + x[0][3]["fCount"], hAxis: { title: '', titleTextStyle: { color: 'black'}} };
                 for (var i in x[0]) {
                     AgeScore = [x[0][i]["AgeSpan"], x[0][i]["mScore"], x[0][i]["fScore"]];
                     Categories.push(AgeScore);
@@ -22,17 +23,18 @@
                         AgeScore = [x[n][a]["AgeSpan"], x[n][a]["mScore"], x[n][a]["fScore"]];
                         Categories.push(AgeScore);
                     }
-                    $('.charts').append('<p>'+x[n][a]["Question"]+'</p><div class ="chartDiv" id="chart_div' + n + '" style="width: 600px; height: 250px;"></div>');
+                    $('.charts').append('<div class="questionDiv"><p>'+x[n][a]["Question"]+'</p><div class ="chartDiv" id="chart_div' + n + '" style=" height: 250px;"></div></div>');
                     data = google.visualization.arrayToDataTable(Categories);
+                    var options = { title: '', hAxis: { title: '', titleTextStyle: { color: 'black'}} };
                     var charts = new google.visualization.ColumnChart(document.getElementById('chart_div' + n)); charts.draw(data, options);
                 }
-                var options = { title: 'Betyg för event', hAxis: { title: 'Åldersspann', titleTextStyle: { color: 'red'}} };
+               
             }
         });
     });
 </script>
 <div class="charts">
     <p>Statistik för hela eventet</p>
-    <div class="chartDiv" id="chart_div" style="width: 600px; height: 250px;"></div>
+    <div class="chartDiv" id="chart_div" style="width: 70%; height: 250px;"></div>
 </div>
 
