företagslogin klar evenet för enskilda företag klart

--- a/Mission.WebUI/Views/Event/CreateEvent.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEvent.cshtml
@@ -1,46 +1,57 @@
-﻿@using Mission.Domain.Entities
-@model Event
-           
-    <link href="@Url.Content("~/Content/Kendo/styles/kendo.common.min.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/Kendo/styles/kendo.default.min.css")" rel="stylesheet">
-
-    <script src="@Url.Content("~/Content/Kendo/js/jquery.min.js")"></script>
-    <script src="@Url.Content("~/Content/Kendo/js/kendo.web.min.js")"></script>
-    <script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>   
- 
-
+﻿@model Mission.WebUI.ViewModels.vm_EventUser
+<link href="@Url.Content("~/Content/Kendo/styles/kendo.common.min.css")" rel="stylesheet">
+<link href="@Url.Content("~/Content/Kendo/styles/kendo.default.min.css")" rel="stylesheet">
+<script src="@Url.Content("~/Content/Kendo/js/jquery.min.js")"></script>
+<script src="@Url.Content("~/Content/Kendo/js/kendo.web.min.js")"></script>
+<script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>
 @{
     ViewBag.Title = "CreateEvent";
 }
 <div id="posts-list">
-
-<h2 class="page-heading"><span>SKAPA EVENT</span></h2>
-
-@using (Html.BeginForm()) { 
+    <h2 class="page-heading">
+        <span>SKAPA EVENT</span></h2>
+    @using (Html.BeginForm())
+    { 
     
-    <div class ="CreateEvent">
-        <p>
-            Titel <br />
-            @Html.EditorFor(e => e.HeadLine)
-       </p>
-       <p>
-            Beskrivning <br />
-            @Html.TextAreaFor(e => e.Description, new { id = "editor", rows ="10", cols ="30", style="width:100%", height="100%"})
-       </p>
-       <p>
-            Stad <br />
-            @Html.EditorFor(e => e.City)
-
-            <div id="to-d">
-                    @Html.TextBoxFor(e => e.Date, new { id = "datetimepicker", value = "10/10/2011 12:00 AM", style = "width:200px;", @class = "k-widget k-datetimepicker k-header" })
-            </div>
-       </p>
-       <p>
-             
-
-            <script>
-                $("#editor").kendoEditor({
-                    tools: [
+        <div class="CreateEvent">
+            <p>
+                Titel
+                <br />
+                @Html.EditorFor(e => e.Event.HeadLine)<span style="color:Red;">@Html.ValidationMessageFor(s => s.Event.HeadLine)</span>
+            </p>
+            <p>
+                Beskrivning
+                <br />
+                @Html.TextAreaFor(e => e.Event.Description, new { id = "editor", rows = "10", cols = "30", style = "width:100%", height = "100%" })
+            </p>
+            <p>
+                @Html.RadioButtonFor(e => e.Event.OpenEvent, 0, new { id = "radio1" })Privat event
+                @Html.RadioButtonFor(e => e.Event.OpenEvent, 1, new { id = "radio2" })Publikt event
+            </p>
+            <p>
+                Stad
+                <br />
+                @Html.EditorFor(e => e.Event.City)<span style="color:Red;">@Html.ValidationMessageFor(s => s.Event.City)</span><br />
+                <div id="to-d">
+                    @Html.TextBoxFor(e => e.Event.Date, new { id = "datetimepicker", value = "10/10/2011 12:00 AM", style = "width:200px;", @class = "k-widget k-datetimepicker k-header" })
+                    <br /><span style="color:Red;">@Html.ValidationMessageFor(s => s.Event.Date)</span>
+                </div>
+            </p>
+            <p>
+                Företag
+                <br />
+                @Html.EditorFor(e => e.Username)<span style="color:Red;">@Html.ValidationMessageFor(s => s.Username)</span>
+            </p>
+            <p id ="Password">
+                Lösenord <b />
+                @Html.EditorFor(e => e.Password)<br />
+                Epost<br />
+                @Html.EditorFor(e => e.Email)
+            </p>
+            <p>
+                <script>
+                    $("#editor").kendoEditor({
+                        tools: [
                 "bold",
                 "italic",
                 "underline",
@@ -64,33 +75,29 @@
                 "subscript",
                 "superscript"
             ]
-                });
-    </script>
-
-        <script>
-            $(document).ready(function () {
-                // create DateTimePicker from input HTML element
-                $("#datetimepicker").kendoDateTimePicker();
-            });
-        </script>
-        <style scoped>
-            #to-do {
-                height: 52px;
-                width: 221px;
-                margin: 30px auto;
-                padding: 91px 0 0 188px;
-                background: url('../../content/web/datepicker/todo.png') transparent no-repeat 0 0;
-            }
-        </style>
-
-       </p>
-
-        <div>
-            <input type="submit" value ="Skapa Event"/>
+                    });
+                </script>
+                <script>
+                    $(document).ready(function () {
+                        // create DateTimePicker from input HTML element
+                        $("#datetimepicker").kendoDateTimePicker();
+                    });
+                </script>
+                <style scoped>
+                    #to-do
+                    {
+                        height: 52px;
+                        width: 221px;
+                        margin: 30px auto;
+                        padding: 91px 0 0 188px;
+                        background: url('../../content/web/datepicker/todo.png') transparent no-repeat 0 0;
+                    }
+                </style>
+            </p>
+            <div>
+                <input type="submit" value="Skapa Event" />
+            </div>
         </div>
-
-    
-    
-    </div>
-}
- </div>
+    }
+</div>
+<script src="@Url.Content("~/Content/js/togglePassword.js")"></script>
